--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Full Motion</title>
+		<title>JavaScript Factory</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -22,9 +22,9 @@
 				<section id="banner" data-video="images/banner">
 					<div class="inner">
 						<header>
-							<h1>Full Motion</h1>
-							<p>A responsive video gallery template with a functional lightbox<br />
-							designed by <a href="https://templated.co/">Templated</a> and released under the Creative Commons License.</p>
+							<h1>JavaScript Factory</h1>
+							<p>Some JavaScript fun project<br />
+							built by <a href="http://www.jeffliang.us">Jeff Liang</a></p>
 						</header>
 						<a href="#main" class="more">Learn More</a>
 					</div>
@@ -38,11 +38,13 @@
 						<div class="thumbnails">
 
 							<div class="box">
-								<a href="https://youtu.be/s6zR2T9vn2c" class="image fit"><img src="images/pic01.jpg" alt="" /></a>
+								<div class="upper">
+									<img class='upper-img' src="https://res.cloudinary.com/dgxmjwbrc/image/upload/c_scale,w_500/v1527285597/matthijs-smit-579209-unsplash.jpg" alt="" />
+								</div>
 								<div class="inner">
-									<h3>Nascetur nunc varius commodo</h3>
-									<p>Interdum amet accumsan placerat commodo ut amet aliquam blandit nunc tempor lobortis nunc non. Mi accumsan.</p>
-									<a href="https://youtu.be/s6zR2T9vn2c" class="button fit" data-poptrox="youtube,800x400">Watch</a>
+									<h3>Drum</h3>
+									<p>Use keyboard to make some noise!!</p>
+									<a href="1_Drum_Kit/drum.html" class="button fit">Try</a>
 								</div>
 							</div>
 
@@ -113,9 +115,7 @@
 				</footer>
 
 		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/jquery.poptrox.min.js"></script>
 			<script src="assets/js/skel.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
