--- a/index.html
+++ b/index.html
@@ -37,8 +37,7 @@
 						<div class="thumbnails">
 
 							<div class="box">
-								<div class="upper">
-									<img class='upper-img' src="https://res.cloudinary.com/dgxmjwbrc/image/upload/c_scale,w_500/v1527285597/matthijs-smit-579209-unsplash.jpg" alt="" />
+								<div class="upper drum">
 								</div>
 								<div class="inner">
 									<h3>Drum</h3>
