--- a/index.html
+++ b/index.html
@@ -25,6 +25,12 @@
 							<h1>JavaScript Factory</h1>
 							<p>Some JavaScript fun project<br />
 							built by <a href="http://www.jeffliang.us">Jeff Liang</a></p>
+							<ul class="icons">
+								<li><a href="https://github.com/jeffliang0318" class="icon fa-github"><span class="label">GitHub</span></a></li>
+								<li><a href="#" class="icon fa-linkedin"><span class="label">Facebook</span></a></li>
+								<li><a href="http://www.jeffliang.us" class="icon fa-user"><span class="label">Instagram</span></a></li>
+								<li><a href="mailto:email.jeffliang@gmail.com?Subject=We%20are%20looking%20for%20a%20software%20engineer%20like%20you!" class="icon fa-envelope"><span class="label">Email</span></a></li>
+							</ul>
 						</header>
 					</div>
 				</section>
@@ -35,9 +41,10 @@
 
 					<!-- Boxes -->
 						<div class="thumbnails">
-
+							<!--  drum -->
 							<div class="box">
-								<div class="upper drum">
+									<div class="upper drum">
+										</a>
 								</div>
 								<div class="inner">
 									<h3>Drum</h3>
@@ -47,19 +54,23 @@
 							</div>
 
 							<div class="box">
-								<a href="https://youtu.be/s6zR2T9vn2c" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+								<div class="upper">
+									<img src="https://res.cloudinary.com/dgxmjwbrc/image/upload/c_scale,w_500/v1527285597/matthijs-smit-579209-unsplash.jpg" alt="drum" class='project-img'>
+								</div>
 								<div class="inner">
-									<h3>Nascetur nunc varius commodo</h3>
-									<p>Interdum amet accumsan placerat commodo ut amet aliquam blandit nunc tempor lobortis nunc non. Mi accumsan.</p>
-									<a href="https://youtu.be/s6zR2T9vn2c" class="button style2 fit" data-poptrox="youtube,800x400">Watch</a>
+									<h3>Drum</h3>
+									<p>Use keyboard to make some noise!!</p>
+									<a href="1_Drum_Kit/drum.html" class="button fit">Try</a>
 								</div>
 							</div>
 
 							<div class="box">
-								<a href="https://youtu.be/s6zR2T9vn2c" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
+								<div class="upper drum">
+									<img src="images/pic03.jpg" alt="" />
+								</div>
 								<div class="inner">
 									<h3>Nascetur nunc varius commodo</h3>
-									<p>Interdum amet accumsan placerat commodo ut amet aliquam blandit nunc tempor lobortis nunc non. Mi accumsan.</p>
+									<p>Interdum amet accumsan placerat</p>
 									<a href="https://youtu.be/s6zR2T9vn2c" class="button style3 fit" data-poptrox="youtube,800x400">Watch</a>
 								</div>
 							</div>
@@ -103,12 +114,11 @@
 						<p>Pellentesque eleifend malesuada efficitur. Curabitur volutpat dui mi, ac imperdiet dolor tincidunt nec. Ut erat lectus, dictum sit amet lectus a, aliquet rutrum mauris. Etiam nec lectus hendrerit, consectetur risus viverra, iaculis orci. Phasellus eu nibh ut mi luctus auctor. Donec sit amet dolor in diam feugiat venenatis. </p>
 
 						<ul class="icons">
-							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon fa-envelope"><span class="label">Email</span></a></li>
+							<li><a href="https://github.com/jeffliang0318" class="icon fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href="#" class="icon fa-linkedin"><span class="label">Facebook</span></a></li>
+							<li><a href="http://www.jeffliang.us" class="icon fa-user"><span class="label">Instagram</span></a></li>
+							<li><a href="mailto:email.jeffliang@gmail.com?Subject=We%20are%20looking%20for%20a%20software%20engineer%20like%20you!" class="icon fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
-						<p class="copyright">&copy; Untitled. Design: <a href="https://templated.co">TEMPLATED</a>. Images: <a href="https://unsplash.com/">Unsplash</a>. Videos: <a href="http://coverr.co/">Coverr</a>.</p>
 					</div>
 				</footer>
 
