--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
 							<h1>JavaScript Factory</h1>
 							<p>Some JavaScript fun project<br />
 							built by <a href="http://www.jeffliang.us">Jeff Liang</a></p>
+							<br>
 							<ul class="icons">
-								<li><a href="https://github.com/jeffliang0318" class="icon fa-github"><span class="label">GitHub</span></a></li>
-								<li><a href="#" class="icon fa-linkedin"><span class="label">Facebook</span></a></li>
-								<li><a href="http://www.jeffliang.us" class="icon fa-user"><span class="label">Instagram</span></a></li>
-								<li><a href="mailto:email.jeffliang@gmail.com?Subject=We%20are%20looking%20for%20a%20software%20engineer%20like%20you!" class="icon fa-envelope"><span class="label">Email</span></a></li>
+								<li><a href="https://github.com/jeffliang0318" class="icon fa-github top-icon"><span class="label">GitHub</span></a></li>
+								<li><a href="#" class="icon fa-linkedin top-icon"><span class="label">Facebook</span></a></li>
+								<li><a href="mailto:email.jeffliang@gmail.com?Subject=We%20are%20looking%20for%20a%20software%20engineer%20like%20you!" class="icon fa-envelope top-icon"><span class="label">Email</span></a></li>
 							</ul>
 						</header>
 					</div>
@@ -110,9 +110,8 @@
 			<!-- Footer -->
 				<footer id="footer">
 					<div class="inner">
-						<h2>Etiam veroeros lorem</h2>
-						<p>Pellentesque eleifend malesuada efficitur. Curabitur volutpat dui mi, ac imperdiet dolor tincidunt nec. Ut erat lectus, dictum sit amet lectus a, aliquet rutrum mauris. Etiam nec lectus hendrerit, consectetur risus viverra, iaculis orci. Phasellus eu nibh ut mi luctus auctor. Donec sit amet dolor in diam feugiat venenatis. </p>
-
+						<h2>Contact info</h2>
+						<p>Do you have any cool idea? Let me know!</p>
 						<ul class="icons">
 							<li><a href="https://github.com/jeffliang0318" class="icon fa-github"><span class="label">GitHub</span></a></li>
 							<li><a href="#" class="icon fa-linkedin"><span class="label">Facebook</span></a></li>
