add the 3rd one

--- a/index.html
+++ b/index.html
@@ -41,10 +41,9 @@
 
 					<!-- Boxes -->
 						<div class="thumbnails">
-							<!--  drum -->
+							<!-- 1 drum -->
 							<div class="box">
 									<div class="upper drum">
-										</a>
 								</div>
 								<div class="inner">
 									<h3>Drum</h3>
@@ -52,26 +51,26 @@
 									<a href="1_Drum_Kit/drum.html" class="button fit">Try</a>
 								</div>
 							</div>
-
+							<!-- 2 clock  -->
 							<div class="box">
 								<div class="upper">
-									<img src="https://res.cloudinary.com/dgxmjwbrc/image/upload/c_scale,w_500/v1527285597/matthijs-smit-579209-unsplash.jpg" alt="drum" class='project-img'>
+									<img src="http://res.cloudinary.com/dgxmjwbrc/image/upload/v1528150988/sonja-langford-357-unsplash.jpg" alt="clock" class='project-img'>
 								</div>
 								<div class="inner">
-									<h3>Drum</h3>
-									<p>Use keyboard to make some noise!!</p>
-									<a href="1_Drum_Kit/drum.html" class="button fit">Try</a>
+									<h3>Clock</h3>
+									<p>Tick, tock, tick tock...</p>
+									<a href="2_JS_and_CSS_Clock/Clock.html" class="button style2 fit">Try</a>
 								</div>
 							</div>
-
+							<!-- 3  -->
 							<div class="box">
-								<div class="upper drum">
-									<img src="images/pic03.jpg" alt="" />
+								<div class="upper">
+									<img src="http://res.cloudinary.com/dgxmjwbrc/image/upload/v1528150988/sonja-langford-357-unsplash.jpg" alt="clock" class='project-img'>
 								</div>
 								<div class="inner">
-									<h3>Nascetur nunc varius commodo</h3>
-									<p>Interdum amet accumsan placerat</p>
-									<a href="https://youtu.be/s6zR2T9vn2c" class="button style3 fit" data-poptrox="youtube,800x400">Watch</a>
+									<h3>Clock</h3>
+									<p>Tick, tock, tick tock...</p>
+									<a href="2_JS_and_CSS_Clock/Clock.html" class="button style2 fit">Try</a>
 								</div>
 							</div>
 
@@ -80,7 +79,7 @@
 								<div class="inner">
 									<h3>Nascetur nunc varius commodo</h3>
 									<p>Interdum amet accumsan placerat commodo ut amet aliquam blandit nunc tempor lobortis nunc non. Mi accumsan.</p>
-									<a href="https://youtu.be/s6zR2T9vn2c" class="button style2 fit" data-poptrox="youtube,800x400">Watch</a>
+									<a href="https://youtu.be/s6zR2T9vn2c" class="button style2 fit" data-poptrox="youtube,800x400">On going</a>
 								</div>
 							</div>
 
@@ -89,7 +88,7 @@
 								<div class="inner">
 									<h3>Nascetur nunc varius commodo</h3>
 									<p>Interdum amet accumsan placerat commodo ut amet aliquam blandit nunc tempor lobortis nunc non. Mi accumsan.</p>
-									<a href="https://youtu.be/s6zR2T9vn2c" class="button style3 fit" data-poptrox="youtube,800x400">Watch</a>
+									<a href="https://youtu.be/s6zR2T9vn2c" class="button style3 fit" data-poptrox="youtube,800x400">On going</a>
 								</div>
 							</div>
 
@@ -98,7 +97,7 @@
 								<div class="inner">
 									<h3>Nascetur nunc varius commodo</h3>
 									<p>Interdum amet accumsan placerat commodo ut amet aliquam blandit nunc tempor lobortis nunc non. Mi accumsan.</p>
-									<a href="https://youtu.be/s6zR2T9vn2c" class="button fit" data-poptrox="youtube,800x400">Watch</a>
+									<a href="https://youtu.be/s6zR2T9vn2c" class="button fit" data-poptrox="youtube,800x400">On going</a>
 								</div>
 							</div>
 
