--- a/index.html
+++ b/index.html
@@ -43,27 +43,27 @@
 						<div class="thumbnails">
 							<!-- 1 drum -->
 							<div class="box">
-									<div class="upper drum">
-								</div>
+								<a href="1_Drum_Kit/drum.html" class="image fit"><img src="http://res.cloudinary.com/dgxmjwbrc/image/upload/c_fill,h_500,w_500/v1528145353/matthijs-smit-579209-unsplash.jpg" alt="drum" /></a>
 								<div class="inner">
 									<h3>Drum</h3>
-									<p>Use keyboard to make some noise!!</p>
-									<a href="1_Drum_Kit/drum.html" class="button fit">Try</a>
+									<p>User keyboard to rock and roll!</p>
+									<a href="1_Drum_Kit/drum.html" class="button style3 fit">Try</a>
 								</div>
 							</div>
 							<!-- 2 clock  -->
 							<div class="box">
-								<div class="upper">
-									<img src="http://res.cloudinary.com/dgxmjwbrc/image/upload/v1528150988/sonja-langford-357-unsplash.jpg" alt="clock" class='project-img'>
+								<div class="uppder">
+									<a href="1_Drum_Kit/drum.html" class="image fit">
+										<img src="http://res.cloudinary.com/dgxmjwbrc/image/upload/c_fill,h_500,w_500/v1528150988/sonja-langford-357-unsplash.jpg" alt="clock" /></a>
 								</div>
 								<div class="inner">
 									<h3>Clock</h3>
-									<p>Tick, tock, tick tock...</p>
-									<a href="2_JS_and_CSS_Clock/Clock.html" class="button style2 fit">Try</a>
+									<p>Tick, tock, tick, tock..</p>
+									<a href="2_JS_and_CSS_Clock/Clock.html" class="button fit">What time is it?</a>
 								</div>
 							</div>
-							<!-- 3  -->
-							<div class="box">
+
+							<!-- <div class="box">
 								<div class="upper">
 									<img src="http://res.cloudinary.com/dgxmjwbrc/image/upload/v1528150988/sonja-langford-357-unsplash.jpg" alt="clock" class='project-img'>
 								</div>
@@ -71,20 +71,31 @@
 									<h3>Clock</h3>
 									<p>Tick, tock, tick tock...</p>
 									<a href="2_JS_and_CSS_Clock/Clock.html" class="button style2 fit">Try</a>
+								</div>
+							</div> -->
+							<!-- 3  ball in maze 1-->
+							<div class="box">
+								<div class="upper">
+									<img src="http://res.cloudinary.com/dgxmjwbrc/image/upload/v1528152818/ball_in_maze_1.jpg" alt="ball-in-maze" class='project-img'>
+								</div>
+								<div class="inner">
+									<h3>Ball in Maze I</h3>
+									<p>Use up down right and left ket to get out of maze!</p>
+									<a href="https://ball-in-maze.herokuapp.com/index.html" class="button style2 fit">Try</a>
 								</div>
 							</div>
 
 							<div class="box">
-								<a href="https://youtu.be/s6zR2T9vn2c" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
+								<a href="https://ball-in-maze.herokuapp.com/index.html" class="image fit"><img src="http://res.cloudinary.com/dgxmjwbrc/image/upload/v1528152818/ball_in_maze_1.jpg" alt="ball-in-maze" /></a>
 								<div class="inner">
-									<h3>Nascetur nunc varius commodo</h3>
-									<p>Interdum amet accumsan placerat commodo ut amet aliquam blandit nunc tempor lobortis nunc non. Mi accumsan.</p>
+									<h3>Ball in Maze 1</h3>
+									<p>Use up down right and left ket to get out of maze!</p>
 									<a href="https://youtu.be/s6zR2T9vn2c" class="button style2 fit" data-poptrox="youtube,800x400">On going</a>
 								</div>
 							</div>
 
 							<div class="box">
-								<a href="https://youtu.be/s6zR2T9vn2c" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
+								<a href="https://youtu.be/s6zR2T9vn2c" class="image fit"><img src="https://res.cloudinary.com/dgxmjwbrc/image/upload/c_scale,w_500/v1527285597/matthijs-smit-579209-unsplash.jpg" alt="" /></a>
 								<div class="inner">
 									<h3>Nascetur nunc varius commodo</h3>
 									<p>Interdum amet accumsan placerat commodo ut amet aliquam blandit nunc tempor lobortis nunc non. Mi accumsan.</p>
