--- a/index.html
+++ b/index.html
@@ -62,53 +62,43 @@
 									<a href="2_JS_and_CSS_Clock/Clock.html" class="button fit">What time is it?</a>
 								</div>
 							</div>
-
-							<!-- <div class="box">
-								<div class="upper">
-									<img src="http://res.cloudinary.com/dgxmjwbrc/image/upload/v1528150988/sonja-langford-357-unsplash.jpg" alt="clock" class='project-img'>
-								</div>
-								<div class="inner">
-									<h3>Clock</h3>
-									<p>Tick, tock, tick tock...</p>
-									<a href="2_JS_and_CSS_Clock/Clock.html" class="button style2 fit">Try</a>
-								</div>
-							</div> -->
 							<!-- 3  ball in maze 1-->
 							<div class="box">
-								<div class="upper">
-									<img src="http://res.cloudinary.com/dgxmjwbrc/image/upload/v1528152818/ball_in_maze_1.jpg" alt="ball-in-maze" class='project-img'>
-								</div>
+								<a href="https://ball-in-maze.herokuapp.com/index.html" class="image fit"><img src="http://res.cloudinary.com/dgxmjwbrc/image/upload/c_fill,h_500,w_500/v1528152818/ball_in_maze_1.jpg" alt="ball_in_maze" /></a>
 								<div class="inner">
 									<h3>Ball in Maze I</h3>
-									<p>Use up down right and left ket to get out of maze!</p>
-									<a href="https://ball-in-maze.herokuapp.com/index.html" class="button style2 fit">Try</a>
+									<p>Use up down right and left key to get out of maze!</p>
+									<a href="https://ball-in-maze.herokuapp.com/index.html" class="button style3 fit">Play</a>
+								</div>
+							</div>
+							<!-- 4th Blur -->
+
+							<div class="box">
+								<a href="https://ball-in-maze.herokuapp.com/index.html" class="image fit">
+									<img src="http://res.cloudinary.com/dgxmjwbrc/image/upload/c_fill,h_500,w_500/v1528156661/blur.jpg" alt="blur" />
+								</a>
+								<div class="inner">
+									<h3>Blur? Or not Blur?</h3>
+									<p>That is the question...</p>
+									<a href="" class="button style2 fit">On going</a>
 								</div>
 							</div>
 
 							<div class="box">
-								<a href="https://ball-in-maze.herokuapp.com/index.html" class="image fit"><img src="http://res.cloudinary.com/dgxmjwbrc/image/upload/v1528152818/ball_in_maze_1.jpg" alt="ball-in-maze" /></a>
+								<a href="" class="image fit"><img src="http://res.cloudinary.com/dgxmjwbrc/image/upload/c_fill,h_500,w_500/v1528157555/jiufen1.jpg" alt="flex-city" /></a>
 								<div class="inner">
-									<h3>Ball in Maze 1</h3>
-									<p>Use up down right and left ket to get out of maze!</p>
-									<a href="https://youtu.be/s6zR2T9vn2c" class="button style2 fit" data-poptrox="youtube,800x400">On going</a>
+									<h3>Flex Cities</h3>
+									<p>Flex here, relax there~</p>
+									<a href="" class="button style3 fit">On going</a>
 								</div>
 							</div>
 
 							<div class="box">
-								<a href="https://youtu.be/s6zR2T9vn2c" class="image fit"><img src="https://res.cloudinary.com/dgxmjwbrc/image/upload/c_scale,w_500/v1527285597/matthijs-smit-579209-unsplash.jpg" alt="" /></a>
+								<a href="" class="image fit"><img src="http://res.cloudinary.com/dgxmjwbrc/image/upload/c_fill,h_500,w_500/v1528157467/b980dc17075be7d7cd4d66b8_rw_1920.jpg" alt=""/></a>
 								<div class="inner">
-									<h3>Nascetur nunc varius commodo</h3>
-									<p>Interdum amet accumsan placerat commodo ut amet aliquam blandit nunc tempor lobortis nunc non. Mi accumsan.</p>
-									<a href="https://youtu.be/s6zR2T9vn2c" class="button style3 fit" data-poptrox="youtube,800x400">On going</a>
-								</div>
-							</div>
-
-							<div class="box">
-								<a href="https://youtu.be/s6zR2T9vn2c" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
-								<div class="inner">
-									<h3>Nascetur nunc varius commodo</h3>
-									<p>Interdum amet accumsan placerat commodo ut amet aliquam blandit nunc tempor lobortis nunc non. Mi accumsan.</p>
-									<a href="https://youtu.be/s6zR2T9vn2c" class="button fit" data-poptrox="youtube,800x400">On going</a>
+									<h3>City look up</h3>
+									<p>Yes, look up.</p>
+									<a href="" class="button fit" data-poptrox="youtube,800x400">On going</a>
 								</div>
 							</div>
 
