--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 					<div class="inner">
 						<header>
 							<h1>JavaScript Factory</h1>
-							<p>Some JavaScript fun project<br />
+							<p>Some JavaScript fun projects<br />
 							built by <a href="http://www.jeffliang.us">Jeff Liang</a></p>
 							<br>
 							<ul class="icons">
