--- a/index.html
+++ b/index.html
@@ -50,16 +50,16 @@
 									<a href="1_Drum_Kit/drum.html" class="button style3 fit">Try</a>
 								</div>
 							</div>
-							<!-- 2 clock  -->
+							<!-- connect 4  -->
 							<div class="box">
 								<div class="uppder">
-									<a href="1_Drum_Kit/drum.html" class="image fit">
-										<img src="http://res.cloudinary.com/dgxmjwbrc/image/upload/c_fill,h_500,w_500/v1528150988/sonja-langford-357-unsplash.jpg" alt="clock" /></a>
+									<a href="connect_four_Jeff_Liang/4.html" class="image fit">
+										<img src="http://res.cloudinary.com/dgxmjwbrc/image/upload/c_fill,h_500,w_500/v1529442127/4.jpg" alt="connect4" /></a>
 								</div>
 								<div class="inner">
-									<h3>Clock</h3>
-									<p>Tick, tock, tick, tock..</p>
-									<a href="2_JS_and_CSS_Clock/Clock.html" class="button fit">What time is it?</a>
+									<h3>Connect 4</h3>
+									<p>Left, right, and drop!</p>
+									<a href="connect_four_Jeff_Liang/4.html" class="button fit">4-4-4-4</a>
 								</div>
 							</div>
 							<!-- 3  ball in maze 1-->
@@ -101,7 +101,18 @@
 									<a href="" class="button fit" data-poptrox="youtube,800x400">On going</a>
 								</div>
 							</div>
-
+							<!-- clock  -->
+							<div class="box">
+								<div class="uppder">
+									<a href="2_JS_and_CSS_Clock/Clock.html" class="image fit">
+										<img src="http://res.cloudinary.com/dgxmjwbrc/image/upload/c_fill,h_500,w_500/v1528150988/sonja-langford-357-unsplash.jpg" alt="clock" /></a>
+								</div>
+								<div class="inner">
+									<h3>Clock</h3>
+									<p>Tick, tock, tick, tock..</p>
+									<a href="2_JS_and_CSS_Clock/Clock.html" class="button fit">What time is it?</a>
+								</div>
+							</div>
 						</div>
 
 					</div>
