update link and ongoing button

--- a/index.html
+++ b/index.html
@@ -74,13 +74,13 @@
 							<!-- 4th Blur -->
 
 							<div class="box">
-								<a href="https://ball-in-maze.herokuapp.com/index.html" class="image fit">
+								<a href="3_CSS Variables/blur.html" class="image fit">
 									<img src="http://res.cloudinary.com/dgxmjwbrc/image/upload/c_fill,h_500,w_500/v1528156661/blur.jpg" alt="blur" />
 								</a>
 								<div class="inner">
 									<h3>Blur? Or not Blur?</h3>
 									<p>That is the question...</p>
-									<a href="" class="button style2 fit">On going</a>
+									<a href="3_CSS Variables/blur.html" class="button style2 fit">Try</a>
 								</div>
 							</div>
 
