--- a/3_CSS Variables/blur.html
+++ b/3_CSS Variables/blur.html
@@ -17,8 +17,8 @@
     <label for="opacity">Opacity:</label>
     <input id="opacity" type="range" name="opacity" min="0" max="10" value="10">
 
-    <label for="base">Base Color</label>
-    <input id="base" type="color" name="base" value="#orange">
+    <label for="base">Base Color:</label>
+    <input id="base" type="color" name="base" value="#DDA0DD">
   </div>
 
   <img src="http://res.cloudinary.com/dgxmjwbrc/image/upload/c_fill,h_500,w_500/v1528156661/blur.jpg">
@@ -30,7 +30,7 @@
     */
     :root {
       --spacing: 10px;
-      --base: orange;
+      --base: #DDA0DD;
       --blur: 10px;
       --opacity: 1;
     }
