--- a/3_CSS Variables/blur.html
+++ b/3_CSS Variables/blur.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Scoped CSS Variables and JS</title>
+  <title>BlurOrNotBlur</title>
 </head>
 <body>
   <h2>Update CSS Variables with <span class='hl'>JS</span></h2>
@@ -45,7 +45,9 @@
     }
     body {
       text-align: center;
-      background: #193549;
+      background-image: url(http://res.cloudinary.com/dgxmjwbrc/image/upload/v1529456242/Screen_Shot_2018-06-19_at_5.56.54_PM.png);
+      background-position: top;
+      background-size: cover;
       color: white;
       font-family: 'helvetica neue', sans-serif;
       font-weight: 100;
