put background img in center

--- a/3_CSS Variables/blur.html
+++ b/3_CSS Variables/blur.html
@@ -46,7 +46,7 @@
     body {
       text-align: center;
       background-image: url(http://res.cloudinary.com/dgxmjwbrc/image/upload/v1529456242/Screen_Shot_2018-06-19_at_5.56.54_PM.png);
-      background-position: top;
+      background-position: center;
       background-size: cover;
       color: white;
       font-family: 'helvetica neue', sans-serif;
