--- a/index.html
+++ b/index.html
@@ -85,6 +85,17 @@
 							</div>
 
 							<div class="box">
+								<a href="update_table/index.html" class="image fit">
+									<img src="http://res.cloudinary.com/dgxmjwbrc/image/upload/c_fill,g_west,h_500,w_500/v1531256848/rawpixel-585633-unsplash.jpg" alt="table" />
+								</a>
+								<div class="inner">
+									<h3>Buy at Low, Sell at High</h3>
+									<p>What is in your table?</p>
+									<a href="update_table/index.html" class="button style2 fit">Try</a>
+								</div>
+							</div>
+
+							<div class="box">
 								<a href="" class="image fit"><img src="http://res.cloudinary.com/dgxmjwbrc/image/upload/c_fill,h_500,w_500/v1528157555/jiufen1.jpg" alt="flex-city" /></a>
 								<div class="inner">
 									<h3>Flex Cities</h3>
