update Stock update

--- a/index.html
+++ b/index.html
@@ -136,8 +136,8 @@
 						<p>Do you have any cool idea? Let me know!</p>
 						<ul class="icons">
 							<li><a href="https://github.com/jeffliang0318" class="icon fa-github"><span class="label">GitHub</span></a></li>
-							<li><a href="#" class="icon fa-linkedin"><span class="label">Facebook</span></a></li>
-							<li><a href="http://www.jeffliang.us" class="icon fa-user"><span class="label">Instagram</span></a></li>
+							<li><a href="#" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
+							<li><a href="http://www.jeffliang.us" class="icon fa-user"><span class="label">PersonalSite</span></a></li>
 							<li><a href="mailto:email.jeffliang@gmail.com?Subject=We%20are%20looking%20for%20a%20software%20engineer%20like%20you!" class="icon fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
 					</div>
