update connect four and stock

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 								</div>
 								<div class="inner">
 									<h3>Clock</h3>
-									<p>Tick, tock, tick, tock..</p>
+									<p>Tick, tock, tick, tock...</p>
 									<a href="2_JS_and_CSS_Clock/Clock.html" class="button fit">What time is it?</a>
 								</div>
 							</div>
