add ball in maze II

--- a/index.html
+++ b/index.html
@@ -96,6 +96,15 @@
 							</div>
 
 							<div class="box">
+								<a href="https://jeffliang0318.github.io/Ball_in_Maze_II/" class="image fit"><img src="http://res.cloudinary.com/dgxmjwbrc/image/upload/c_fill,h_500,w_500/v1528152818/ball_in_maze_1.jpg" alt="ball_in_maze" /></a>
+								<div class="inner">
+									<h3>Ball in Maze II</h3>
+									<p>Ball-in-maze is back!!</p>
+									<a href="https://jeffliang0318.github.io/Ball_in_Maze_II/" class="button style3 fit">Let the ball rolling!</a>
+								</div>
+							</div>
+
+							<div class="box">
 								<a href="" class="image fit"><img src="http://res.cloudinary.com/dgxmjwbrc/image/upload/c_fill,h_500,w_500/v1528157555/jiufen1.jpg" alt="flex-city" /></a>
 								<div class="inner">
 									<h3>Flex Cities</h3>
