add thanks for free iex api

--- a/update_table/index.html
+++ b/update_table/index.html
@@ -35,6 +35,10 @@
         </tr>
       </table>
     </section>
+    <section>
+      <h1 class='white title'>Thanks FREE Stock API
+        <a class="orange" href="https://iextrading.com/developer/docs/">IEX API</a> </h1>
+    </section>
     <script src='barChart.js'>
     </script>
     <script src='table.js'>
